# advent-of-code-2025-ocaml

./: dune-project
lib/: cafeteria.ml  cafeteria.mli  dune  factory.ml  factory.mli  gift_shop.ml  gift_shop.mli  laboratories.ml  laboratories.mli  lobby.ml  lobby.mli  movie_theater.ml  movie_theater.mli  playground.ml  playground.mli  printing_department.ml  printing_department.mli  secret_entrance.ml  secret_entrance.mli  trash_compactor.ml  trash_compactor.mli  utils.cmi  utils.cmo  utils.ml  utils.mli
test/: dune  test_advent_of_code_2025_ocaml.ml  test_cafeteria.ml  test_factory.ml  test_gift_shop.ml  test_laboratories.ml  test_lobby.ml  test_movie_theater.ml  test_playground.ml  test_printing_department.ml  test_secret_entrance.ml  test_trash_compactor.ml
testdata/: day03_input.txt  result.txt
